# DevOps

./: .gitignore  docker-compose-beta.yml  docker-compose.yml
k8s/: api.yaml  commands.txt  db.yaml  ingress.yaml  mybackendlb-deployment.yaml  myfrontend-deployment.yml  mypostgres-secret.yml  myredis-service-clusterip.yml  pv-local.yml
new_k8s/: api.yaml  cache.yaml  client.yaml  configmap.yaml  db.yaml  ingress.yaml  secret.yaml  volume.yaml
old_k8s/: mybackendlb-node-port.yaml
pokemon-api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
pokemon-api/env/: base.env  local.env
pokemon-api/scripts/: docker-entrypoint.sh  wait_redis_postgres.py
pokemon-api/src/consts/: api_consts.py
pokemon-api/src/database/: __init__.py
pokemon-api/src/main/: app.py  settings.py
pokemon-api/src/pokemon/: crud.py  models.py  schema.py
pokemon-api/src/utils/: cache.py  create_pokemon_db.py  main_utils.py
pokemon-client/: package.json
pokemon-client/src/: constants.tsx  utils.ts
pokemon-client/src/components/: App.tsx  pokemonDetailView.tsx  pokemonListView.tsx
pokemon-client/src/styles/: App.css
pokemon-client/src/types/: pokemon.tsx
server/: default.conf
